<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="#91FDBC"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIDdisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID: "
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:textColor="#C207F6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMobile3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobile_number"
                    android:textColor="#C207F6"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnCall1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CALL" />

            </LinearLayout>

            <EditText
                android:id="@+id/etMobile3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHome3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_number"
                    android:textColor="#C207F6"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnCall2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CALL" />

            </LinearLayout>

            <EditText
                android:id="@+id/etHome3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tvEmail3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email1"
                android:textColor="#C207F6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmail3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvAddress3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address1"
                android:textColor="#C207F6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etAddress3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#C207F6"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rgFemale3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/rgMale3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_info"
                android:textColor="#C207F6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/cbFav3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favourites"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>