<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="13dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFav1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="⭐"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvGender1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="👨🏻"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#3700FF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📱"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvMobile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#00FFEA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🏡"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvHome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#00FFEA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📧"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvEmail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#E91E63" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📃"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#2196F3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📋"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvInfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>